<resources>
    <string name="app_name">Postopia</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="switch_langage">Switch Language</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
</resources>